--- a/config.yaml
+++ b/config.yaml
@@ -120,12 +120,19 @@ params:
             id:
 
     widgets:
-        enabled:
-            - search
-            - toc
-            - categories
-            - archives
-            - tag-cloud
+        homepage:
+            - type: search
+            - type: archives
+              params:
+                  limit: 5
+            - type: categories
+              params:
+                  limit: 5
+            - type: tag-cloud
+              params:
+                  limit: 10
+        page:
+            - type: toc
 
     opengraph:
         twitter:
